/*
 * $Id: ChangeLog,v 1.2929 2004/05/12 12:29:39 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-05-12 16:00 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * include/hbdefs.h
    * Added #if ( ! defined( __MINGW32__ ) ) for UINT_16MAX
  * source/rdd/dbf1.c
    + Added #if defined( __MINGW32__ ) for include <stdint.h>

2004-05-12 16:20 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * contrib/libct/screen2.prg
    + Added SAYSCREEN(). Thanks to Valery Belorustcev.

2004-05-11 21:32 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbdefs.h
    * Added #if ( ! defined( __XCC__ ) ) guard arounf #define [U]INT16|32_MIN|MAX

  * source/rdd/dbf1.c
    + Added #include <stdint.h> guarded by #if defined( __XCC__ )

2004-05-11 23:20 UTC-0300 Eduardo Fernandes <eduardo@modalsistemas.com.br>
  * source/rtl/teditor.prg
    + Many fixes, enhancements and improvements: Tab management. Text scroll
      management, <insert> message, HardCR and SoftCR management.
      CTRL-T (Del word right) behaviour implemented. Manny methods were added,
      others changed and rewriten. See teditor.prg to more details.

  * source/rtl/memoedit.prg
    + New memoedit parameter <lToggleExitSave> to toggle CTRL-W / CTRL-Q to
      exit with save, default is CTRL-W as Clipper. All changes was made to
      turn xHarbour memoedit more Clipper compatible.

  * source/rtl/ttextlin.prg
    + Added TabCol element to Tab management.

  * tests/medit.prg
    + Added medit.prg to test these changes.

2004-05-12 04:20 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/contrib/libct/addascii.c
  * xharbour/contrib/libct/bit1.c
  * xharbour/contrib/libct/bit2.c
  * xharbour/contrib/libct/bit3.c
  * xharbour/contrib/libct/files.c
  * xharbour/contrib/libct/pad.c
    * long to LONG changed
