@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2929 2004/05/12 12:29:39 likewolf Exp $
+ * $Id: ChangeLog,v 1.2930 2004/05/12 14:11:10 lf_sfnet Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,16 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-05-12 20:45 UTC+0200 Maurilio Longo <maurilio.longo@libero.it>
+   * include/hbdefs.h
+     * moved end of section regarding HB_DONT_DEFINE_BASIC_TYPES before
+       /*
+        * this is a hack and doesn't have to be true on some machines
+        * please update it if necessary
+        */
+       this is required to be able to compile with GCC under OS/2, I hope this doesn't
+       break anything else, but to know I have to commit.
 
 2004-05-12 16:00 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
   * include/hbdefs.h
